# Fast-api

./: main.py  pyproject.toml  test_simple.py
.github/workflows/: workflow.yml
app/: __init__.py
