[project]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = [
    {name = "jongwonkim987",email = "jongwonkim987@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "coverage (>=7.13.4,<8.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
[too.coverage.run]
omit =["*/test_*.py"]

[too.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"