[project]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = [
    {name = "jongwonkim987",email = "jongwonkim987@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "black (>=26.1.0,<27.0.0)",
    "ruff (>=0.15.0,<0.16.0)",
    "fastapi (>=0.128.8,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "coverage (>=7.13.4,<8.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
[too.coverage.run]
omit =["*/test_*.py"]

[too.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.peotry.dependencies]
python = ">=3.12,<4.0"